Prep for server setup.

--- a/src/Main.less
+++ b/src/Main.less
@@ -1,6 +1,5 @@
 body {
   font-family: 'Work Sans', sans-serif;
-  background: rgba(0, 0, 60, 1);
 }
 
 html {
@@ -252,6 +251,7 @@ html {
       position: relative;
       width: 50px;
       height: 28px;
+      vertical-align: top;
       background: rgb(40,40,40);
 
       & + & {
