--- a/src/Main.less
+++ b/src/Main.less
@@ -57,6 +57,10 @@ html {
       height: 32px;
     }
 
+    &.is-separator {
+      margin-top: 8px;
+    }
+
     &.is-current &Lot {
       background: yellow;
     }
@@ -446,6 +450,10 @@ html {
     margin: 0;
     vertical-align: middle;
     display: flex;
+
+    &.is-separator {
+      margin-top: 12px;
+    }
 
     &Lot {
       font-weight: bold;
