Add fault tolerance to the server and client.

--- a/src/Main.less
+++ b/src/Main.less
@@ -18,6 +18,22 @@ html {
   }
 }
 
+.ErrorDisplay {
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  height: 20px;
+  width: 20px;
+  background: red;
+  display: none;
+
+  &__text {
+    position: absolute;
+    left: 40px;
+    color: red;
+  }
+}
+
 .LiftOrder {
   position: fixed;
   bottom: 20px;
